external-crates/move/crates/move-compiler/tests/move_check/expansion/spec_schema_member_conflicts.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:4:5
  │
4 │     spec schema Foo<T> {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:11:5
   │
11 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:20:5
   │
20 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:27:5
   │
27 │     spec schema Foo<T> {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:30:17
   │
30 │     spec module {
   │                 ^
   │                 │
   │                 Unexpected '{'
   │                 Expected an address or an identifier

